--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -2,4 +2,9 @@ header {
     background-image: url(../../Assignment-1/assets/img/image-1.jpg);
     height: 100vh;
     background-size: cover;
+    h1 {
+        text-align: right;
+        word-spacing: 100vw;
+        margin-top: 75px;
+    }
 }
