--- a/styles/styles.css
+++ b/styles/styles.css
@@ -275,3 +275,25 @@ header h1 {
   word-spacing: 100vw;
   margin-top: 75px;
 }
+
+.fa-brands {
+  color: #FCFCFC;
+}
+
+.social-icons ul {
+  text-decoration: none;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.social-icons li {
+  padding: 20px 0;
+}
