--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -6,5 +6,6 @@ header {
         text-align: right;
         word-spacing: 100vw;
         margin-top: 75px;
+        padding-right: 100px;
     }
 }
