--- a/styles/styles.css
+++ b/styles/styles.css
@@ -248,11 +248,32 @@ h3 {
   color: #152D20;
 }
 
+p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 29px;
+  color: #FCFCFC;
+}
+
 .wrapper {
   width: 85%;
   margin: 0 auto;
 }
 
+button {
+  font-family: "Cormorant Garamond", serif;
+  font-size: 18px;
+  line-height: 29px;
+  font-weight: 600;
+  background-color: #FCFCFC;
+  padding: 10px 20px;
+  border: none;
+}
+
+nav {
+  padding-top: 25px;
+}
 nav ul {
   display: inline-block;
 }
@@ -274,6 +295,7 @@ header h1 {
   text-align: right;
   word-spacing: 100vw;
   margin-top: 75px;
+  padding-right: 100px;
 }
 
 .fa-brands {
@@ -295,5 +317,33 @@ header h1 {
           flex-direction: column;
 }
 .social-icons li {
-  padding: 20px 0;
+  padding: 15px 0;
+}
+
+.about {
+  width: 100%;
+  background-color: #152D20;
+  padding: 100px 0;
+}
+.about .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.about .image-container {
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+  width: 100%;
+  padding-right: 50px;
+}
+.about .image-container img {
+  width: 100%;
+}
+.about .text-container {
+  -ms-flex-preferred-size: 70%;
+      flex-basis: 70%;
+  width: 100%;
+}
+.about h2 {
+  margin-top: 0;
 }
