--- a/styles/styles.css
+++ b/styles/styles.css
@@ -347,3 +347,39 @@ header h1 {
 .about h2 {
   margin-top: 0;
 }
+
+.gallery {
+  background-color: #C3D3CB;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 50px 0 100px 0;
+}
+.gallery h3 {
+  text-align: center;
+}
+.gallery .gallery-container ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.gallery .gallery-container ul li {
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+  width: 100%;
+  list-style: none;
+}
+.gallery .gallery-container ul img {
+  width: 100%;
+}
