--- a/styles/sass/_mixin.scss
+++ b/styles/sass/_mixin.scss
@@ -3,3 +3,7 @@
     font-size: $size-value;
     text-transform: uppercase;
   }
+
+@mixin mobile-responsive () {
+    @media (max-width: 768px) { @content; }
+  }
