--- a/styles/sass/_nav.scss
+++ b/styles/sass/_nav.scss
@@ -11,4 +11,9 @@ nav {
         text-decoration: none;
         color: #FCFCFC;
     }
+    @include mobile-responsive {
+        display: none;
+        padding: 0;
+        margin: 0;
+    }
 }
