--- a/styles/sass/_gallery.scss
+++ b/styles/sass/_gallery.scss
@@ -4,8 +4,14 @@
     align-items: center;
     justify-content: center;
     padding: 50px 0 100px 0;
+    @include mobile-responsive {
+        padding: 10px 0 50px 0;
+    }
     h3 {
         text-align: center;
+        @include mobile-responsive {
+            font-size: 2rem;
+        }
     }
     .gallery-container {
         ul {
@@ -16,6 +22,9 @@
                 flex-basis: 30%;
                 width: 100%;
                 list-style: none;
+                @include mobile-responsive {
+                    flex-basis: 50%;
+                }
             }
             img {
                 width: 100%;
