--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -2,7 +2,10 @@ header {
     background-image: url(../../Assignment-1/assets/img/image-1.jpg);
     height: 100vh;
     background-size: cover;
-    h1 {
+    @include mobile-responsive {
+        background-position: 30%
+    }
+        h1 {
         text-align: right;
         word-spacing: 100vw;
         margin-top: 75px;
@@ -12,6 +15,7 @@ header {
             word-spacing: 0;
             margin: 0;
             text-align: left;
+            padding: 0;
         }
     }
 }
